--- a/index.css
+++ b/index.css
@@ -115,18 +115,21 @@ footer{
 
 @media screen and (min-width:200px) and (max-width:700px){
   .container{
-    width: 400px;
+    width: 300px;
     margin: 0 auto;
   }
   .section-two-image-container{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap:30px;
     
   }
   .feature-image{
-    width: 400px;
+    width: 300px;
     border-radius: 4.6px;
   }
-  
+  .main-image{
+    width:100%;
+  }
 }
